+ Fixed align introduction home

--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -27,14 +27,14 @@
   display: flex;
 }
 
-.home-introdution-container {
+.home-introduction-container {
   align-items: center;
   display: flex;
   justify-content: center;
   width: 55%;
 }
 
-.home-introdution-content {
+.home-introduction-content {
   align-items: flex-start;
   animation: toRight 1s;
   display: flex;
